--- a/spring-boot-ws-holiday/pom.xml
+++ b/spring-boot-ws-holiday/pom.xml
@@ -48,6 +48,11 @@
 			<artifactId>wsdl4j</artifactId>
 		</dependency>
 
+	<dependency>
+	    <groupId>javax.xml.bind</groupId>
+	    <artifactId>jaxb-api</artifactId>
+	    <version>2.2.12</version>
+	</dependency>
 
 		
 	</dependencies>
@@ -58,6 +63,28 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
+		  <plugin>
+		    <groupId>org.codehaus.mojo</groupId>
+		    <artifactId>jaxb2-maven-plugin</artifactId>
+		    <version>1.6</version>
+		    <executions>
+		        <execution>
+		            <id>xjc</id>
+		            <goals>
+		                <goal>xjc</goal>
+		            </goals>
+		        </execution>
+		    </executions>
+		    <configuration>
+		        <schemaDirectory>${project.basedir}/src/main/resources/META-INF/schemas</schemaDirectory>
+		        <outputDirectory>${project.basedir}/src/main/java</outputDirectory>
+		        <clearOutputDir>false</clearOutputDir>
+		    </configuration>
+		   </plugin>			
+			
+			
+			
 		</plugins>
 	</build>
 	
