plugin para cliente ws

--- a/spring-boot-ws-holiday/pom.xml
+++ b/spring-boot-ws-holiday/pom.xml
@@ -64,6 +64,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 			
+		  <!--  Plugin para el servidor --> 	
 		  <plugin>
 		    <groupId>org.codehaus.mojo</groupId>
 		    <artifactId>jaxb2-maven-plugin</artifactId>
@@ -82,6 +83,31 @@
 		        <clearOutputDir>false</clearOutputDir>
 		    </configuration>
 		   </plugin>			
+			
+			<!-- Plugin para el cliente -->
+			
+			
+		<plugin>
+		    <groupId>org.jvnet.jaxb2.maven2</groupId>
+		    <artifactId>maven-jaxb2-plugin</artifactId>
+		    <executions>
+		        <execution>
+		            <goals>
+		                <goal>generate</goal>
+		            </goals>
+		        </execution>
+		    </executions>
+		    <configuration>
+		        <schemaLanguage>WSDL</schemaLanguage>
+		        <generatePackage>pe.joedayz.wsdl</generatePackage>
+		        <forceRegenerate>true</forceRegenerate>
+		        <schemas>
+		            <schema>
+		                <url>http://localhost:8080/services/students.wsdl</url>
+		            </schema>
+		        </schemas>
+		    </configuration>
+		</plugin>			
 			
 			
 			
