--- a/spring-boot-ws-holiday/pom.xml
+++ b/spring-boot-ws-holiday/pom.xml
@@ -14,8 +14,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.3.0.BUILD-SNAPSHOT</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>1.2.5.RELEASE</version>
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
@@ -28,13 +28,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-ws</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>jaxen</groupId>
 			<artifactId>jaxen</artifactId>
@@ -48,48 +48,47 @@
 			<artifactId>wsdl4j</artifactId>
 		</dependency>
 
-	<dependency>
-	    <groupId>javax.xml.bind</groupId>
-	    <artifactId>jaxb-api</artifactId>
-	    <version>2.2.12</version>
-	</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.2.12</version>
+		</dependency>
 
-		
+
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			
-		  <!--  Plugin para el servidor --> 	
-		  <plugin>
-		    <groupId>org.codehaus.mojo</groupId>
-		    <artifactId>jaxb2-maven-plugin</artifactId>
-		    <version>1.6</version>
-		    <executions>
-		        <execution>
-		            <id>xjc</id>
-		            <goals>
-		                <goal>xjc</goal>
-		            </goals>
-		        </execution>
-		    </executions>
-		    <configuration>
-		        <schemaDirectory>${project.basedir}/src/main/resources/META-INF/schemas</schemaDirectory>
-		        <outputDirectory>${project.basedir}/src/main/java</outputDirectory>
-		        <clearOutputDir>false</clearOutputDir>
-		    </configuration>
-		   </plugin>			
-			
-		
-			
-			
-			
+
+			<!-- Plugin para el servidor -->
+			<plugin>
+             <groupId>org.jvnet.jaxb2.maven2</groupId>
+                <artifactId>maven-jaxb2-plugin</artifactId>
+                <version>0.12.3</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+				<configuration>
+					<schemaDirectory>${project.basedir}/src/main/resources/META-INF/schemas</schemaDirectory>
+					<outputDirectory>${project.basedir}/src/main/java</outputDirectory>
+					<clearOutputDir>false</clearOutputDir>
+				</configuration>
+			</plugin>
+
+
+
+
+
 		</plugins>
 	</build>
-	
+
 
 </project>
