--- a/visitas/src/main/resources/application.properties
+++ b/visitas/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 
 spring.datasource.url=jdbc:mysql://localhost/visitas
-spring.datasource.username=root
-spring.datasource.password=joedayz
+spring.datasource.username=dev
+spring.datasource.password=dev123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
